# ThoughtWorksHomework20161013

./: .gitignore  CMakeLists.txt  Configs.h.in  README.md
inputs/: demo-output.txt  demo.txt  test1-input-2016-02-02-100.txt  test1-input-2016-04-18-500.txt  test1-input-2016-08-23-10.txt  test1-input-2016-09-02-50.txt  test1-output-2016-02-02-100.txt  test1-output-2016-04-18-500.txt  test1-output-2016-08-23-10.txt  test1-output-2016-09-02-50.txt  test1.txt
src/: GenerateSummary.h  Transaction.h  Utils.h  demo.cpp  stdin2stdout.cpp
tests/: test1.cpp  test2.cpp
